<resources>
    <string name="app_name">Androed</string>
    <string name="joined">Joined:</string>
    <string name="last_login">Last Login:</string>
    <string name="video_watched">Video Watched:</string>
    <string name="more_info">More Info</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="name">Name:</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="friends">Friends</string>
</resources>